# dvwa-ansible

./: .ansible-lint  .gitignore  README.md  ansible.cfg  collection_install.sh  hosts  hosts.yml  main.yml  pyproject.toml  requirements.txt  requirements.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
group_vars/: all.yml
molecule/default/: cleanup.yml  converge.yml  create.yml  destroy.yml  molecule.yml  verify.yml
roles/common/handlers/: main.yml
roles/common/tasks/: main.yml
roles/db/tasks/: main.yml  mysql_security.yml  mysql_setup.yml
roles/php/handlers/: main.yml
roles/php/tasks/: configchange.yml  main.yml  phpinstall.yml
roles/php/templates/: 000-default.conf.j2  config.inc.php.j2  dvwa.ini.j2
roles/web/tasks/: main.yml
roles/web/templates/: 000-default.conf.j2  config.inc.php.j2
