[project]
name = "dvwa-ansible"
version = "0.1.0"
description = "Ansible playbook for deploying Damn Vulnerable Web Application on Ubuntu"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "ansible-core==2.21.2",
]

[dependency-groups]
dev = [
    "ansible-lint==26.6.0",
]
molecule = [
    "libvirt-python==12.5.0",
    "lxml>=5.3,<7",
    "molecule==26.6.0",
]

[tool.uv]
package = false
required-version = ">=0.11.30,<0.12"
